--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/.vs/UnitTestingWebAPI/v15/Server/sqlite3/storage.ide-wal
+/.vs/UnitTestingWebAPI/v15/Server/sqlite3/storage.ide-shm
+/.vs/UnitTestingWebAPI/v15/Server/sqlite3/storage.ide
+/.vs/UnitTestingWebAPI/v15/Server/sqlite3/db.lock
